--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
   pluto_grid:
-    path: ../../../
+    git:
+      url: https://github.com/TecLink-Automacao-Industrial/pluto_grid.git
+      ref: main
   pluto_grid_export:
     path: ../
   file_saver: ^0.1.0
