--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   pluto_grid:
-    path: ../..
+    git:
+      url: https://github.com/TecLink-Automacao-Industrial/pluto_grid.git
+      ref: main
   csv: ^5.0.1
   pdf: ^3.8.3
   printing: ^5.9.3
